--- a/popup.html
+++ b/popup.html
@@ -374,68 +374,60 @@
       <div class="la-popup_body _d-flex _grow">
         <div class="la-popup_grid _btns-grid">
           <div class="la-popup_col">
-            <a
-              href="https://www.bbc.co.uk/iplayer"
-              target="_blank"
-              rel="noopener noreferrer"
+            <button
+              id="iplayer"
+              type="button"
+              class="la-popup_brand-item w-img"
             >
-              <button type="button" class="la-popup_brand-item w-img">
-                <img
-                  src="./images/img-1.svg"
-                  alt="Brand logo"
-                  class="img-cover"
-                  width="168"
-                  height="96"
-                /></button
-            ></a>
+              <img
+                src="./images/img-1.svg"
+                alt="Brand logo"
+                class="img-cover"
+                width="168"
+                height="96"
+              />
+            </button>
           </div>
           <div class="la-popup_col">
-            <a
-              href="https://www.itv.com/"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <button type="button" class="la-popup_brand-item w-img">
-                <img
-                  src="./images/img-2.svg"
-                  alt="Brand logo"
-                  class="img-cover"
-                  width="168"
-                  height="96"
-                /></button
-            ></a>
+            <button id="itv" type="button" class="la-popup_brand-item w-img">
+              <img
+                src="./images/img-2.svg"
+                alt="Brand logo"
+                class="img-cover"
+                width="168"
+                height="96"
+              />
+            </button>
           </div>
           <div class="la-popup_col">
-            <a
-              href="https://www.channel4.com/"
-              target="_blank"
-              rel="noopener noreferrer"
+            <button
+              id="channel4"
+              type="button"
+              class="la-popup_brand-item w-img"
             >
-              <button type="button" class="la-popup_brand-item w-img">
-                <img
-                  src="./images/img-3.svg"
-                  alt="Brand logo"
-                  class="img-cover"
-                  width="168"
-                  height="96"
-                /></button
-            ></a>
+              <img
+                src="./images/img-3.svg"
+                alt="Brand logo"
+                class="img-cover"
+                width="168"
+                height="96"
+              />
+            </button>
           </div>
           <div class="la-popup_col">
-            <a
-              href="https://tvplayer.com/"
-              target="_blank"
-              rel="noopener noreferrer"
+            <button
+              id="tvplayer"
+              type="button"
+              class="la-popup_brand-item w-img"
             >
-              <button type="button" class="la-popup_brand-item w-img">
-                <img
-                  src="./images/img-4.svg"
-                  alt="Brand logo"
-                  class="img-cover"
-                  width="168"
-                  height="96"
-                /></button
-            ></a>
+              <img
+                src="./images/img-4.svg"
+                alt="Brand logo"
+                class="img-cover"
+                width="168"
+                height="96"
+              />
+            </button>
           </div>
         </div>
       </div>
@@ -464,5 +456,6 @@
         </button>
       </div>
     </div>
+    <script src="popup.js"></script>
   </body>
 </html>
