added a proxy and 2 test buttons

--- a/popup.html
+++ b/popup.html
@@ -341,7 +341,10 @@
             />
           </svg>
         </a>
-
+        <!-- ! -->
+        <button id="ip" type="button" style="color: #fff">IP</button>
+        <button id="ip2" type="button" style="color: #fff">IP2</button>
+        <!-- ! -->
         <a
           href="#"
           class="la-popup_header__link _d-inline-flex _align-items-center"
